@@ -15,6 +15,11 @@
 
 -------------------------------------------------------------------------------
 
+	2009-08-13
+
+	* spamitarium.pl updated to version 0.4.0
+	  (thanks to Tom Anderson)
+
 	2009-08-05
 
 	* Merged an updated version of Ted Phelps's "Patch to prevent .ENCODING
